<resources>
	<string name="app_name">Advanced Recycler View</string>

	<string name="action_settings">Settings</string>
	<string name="title_activity_auth">AuthActivity</string>
	<string name="your_favourite_animal">"Your favourite animal is: %1$s"</string>
	<string name="your_sort_order">"Your sort order is: %1$s"</string>
	<string name="error_happened">Something went wrong!</string>
	<string name="title">"Title: "</string>
	<string name="artist">"Artist: "</string>
	<string name="action_staggered_grid">Use fancy grid</string>

	<string name="sort_order_pref_default_value">1</string>
	<string name="fav_animal_pref_default_value">1</string>
	<string name="settings_fav_animal_title">Choose favourite animal</string>
	<string name="settings_sort_order_title">Choose sort order</string>
	<string name="settings_purge_by_validity">Clear data when expired</string>
	<string name="your_update_will_use_validity">Delete expired data</string>
	<string name="your_update_will_use_network">Overwrite expired data</string>

</resources>
